fix: overflow-x hidden on screens below 880px width

--- a/style/index.css
+++ b/style/index.css
@@ -54,6 +54,12 @@ html {
     scroll-behavior: smooth;
 }
 
+@media only screen and (max-width: 880px) {
+    html {
+        overflow-x: hidden;
+    }
+}
+
 @media screen and (prefers-reduced-motion: reduce) {
     html {
         scroll-behavior: auto;
